test/files/neg/implicit-shadow.check
implicit-shadow.scala:5: <i2s: error> is not a valid implicit value for Int(1) => ?{def isEmpty: ?} because:
reference to i2s is ambiguous;
it is imported twice in the same scope by
import C._
and import B._
	1.isEmpty
        ^
implicit-shadow.scala:5: error: value isEmpty is not a member of Int
	1.isEmpty
          ^
one error found
